tests/NormalTests/paczka1/small_fuzzy/77952920.err
Error in line 13: HzQbBtT S682 83,5
Error in line 14: HzQbBtT S929 61,7
